added bunch of sample stuff details view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,13 @@
     <string name="navigation_drawer_close">Drawer Close</string>
     <string name="title_home">Home</string>
     <string name="submit">Send Http Request</string>
+    <string name="hint_nachname">Nachname</string>
+    <string name="hint_vorname">Vorname</string>
+    <string name="hint_anschrift">Anschrift</string>
+    <string name="Details">Details</string>
+    <string name="verletzte_einschliesslich_leichtverletzte">Verletzte, einschliesslich Leichtverletzte</string>
+    <string name="ja">ja</string>
+    <string name="nein">nein</string>
 
 
 </resources>
