added menu with some fancy icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="verletzte_einschliesslich_leichtverletzte">Verletzte, einschliesslich Leichtverletzte</string>
     <string name="ja">ja</string>
     <string name="nein">nein</string>
+    <string name="Home">Home</string>
 
 
 </resources>
