--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,5 +60,6 @@
     <string name="page_drawing">Drawing</string>
     <string name="settings">Settings</string>
     <string name="email">Email</string>
+    <string name="page_date">Datum</string>
 
 </resources>
