--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="hint_vorname">Vorname</string>
     <string name="hint_anschrift">Anschrift</string>
     <string name="page_details">Details</string>
-    <string name="verletzte_einschliesslich_leichtverletzte">Verletzte, einschliesslich Leichtverletzte</string>
+    <string name="verletzte_einschliesslich_leichtverletzte">Verletzte, einschliesslich Leichtverletzte:</string>
     <string name="ja">ja</string>
     <string name="nein">nein</string>
     <string name="page_home">Home</string>
